Agregando nuevo link de Navegación

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar__navigation">
+          <li><a href="#">Inicio</a></li>
           <li><a href="#">Trabajo</a></li>
           <li><a href="#">Características</a></li>
           <li><a href="#">Blog</a></li>
